<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.soliscode</groupId>
  <artifactId>soliscode-test</artifactId>
  <!-- Keep development on a SNAPSHOT so publish:snapshot has something to push.
       semantic-release will set a non-SNAPSHOT for releases, then bump back. -->
  <version>1.0.3</version>
  <packaging>jar</packaging>

  <name>SolisCode Test</name>
  <description>Library for writing unit tests for classes that implement standard interfaces</description>
  <url>https://soliscode.org</url>
  <inceptionYear>2025</inceptionYear>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>evanbergstrom</id>
      <name>Evan Bergstrom</name>
      <email>evan.bergstrom@icloud.com</email>
      <organization>soliscode</organization>
      <url>https://www.evanbergstrom.com</url>
      <timezone>America/New_York</timezone>
      <roles>
        <role>owner</role>
        <role>developer</role>
      </roles>
    </developer>
  </developers>

  <scm>
    <connection>scm:git@gitlab.com:soliscode/soliscode-test.git</connection>
    <developerConnection>scm:git:ssh://git@gitlab.com:soliscode/soliscode-test.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://gitlab.com/soliscode/soliscode-test.git</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>23</java.version>
    <java.vendor>oracle</java.vendor>

    <javaDocStylesheetPath>${basedir}/src/main/javadoc/stylesheet.css</javaDocStylesheetPath>

    <maven.plugin.validation>verbose</maven.plugin.validation>

    <math.mathjax.url>https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js</math.mathjax.url>
    <allowscript.javadoc.qualifier>--allow-script-in-comments</allowscript.javadoc.qualifier>
    <doclint.javadoc.qualifier>-Xdoclint:all</doclint.javadoc.qualifier>

    <!-- compile dependency versions -->
    <junit-platform.version>1.10.1</junit-platform.version>
    <junit-jupiter.version>5.10.1</junit-jupiter.version>
    <assertj-core.version>3.24.2</assertj-core.version>
    <jetbrains-annotations.version>24.1.0</jetbrains-annotations.version>

    <!-- plugin versions -->
    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
    <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
    <maven-surefire-report-plugin.version>3.1.2</maven-surefire-report-plugin.version>
    <maven-project-info-reports-plugin.version>3.4.5</maven-project-info-reports-plugin.version>
    <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
    <maven-checkstyle-plugin.version>3.3.0</maven-checkstyle-plugin.version>
    <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
    <maven-surefire-junit5-tree-reporter.verison>1.4.0</maven-surefire-junit5-tree-reporter.verison>
    <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>

    <!-- build plugin dependencies -->
    <central-publishing-maven-plugin.version>0.8.0</central-publishing-maven-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <dependency-check.version>12.1.3</dependency-check.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>${jetbrains-annotations.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit-jupiter.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-jupiter.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-testkit</artifactId>
      <version>${junit-platform.version}</version>
    </dependency>
  </dependencies>

  <distributionManagement>
    <site>
      <id>${project.artifactId}-site</id>
      <name>SolisCode Test Site</name>
      <url>${project.baseUri}</url>
    </site>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <debug>true</debug>
          <debuglevel>lines,vars,source</debuglevel>
          <release>${java.version}</release>
          <!-- Need the source and target properties so maven-javadoc-plugin will find maven-compile-plugin -->
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
          </dependency>
          <dependency>
            <groupId>me.fabriciorby</groupId>
            <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
            <version>${maven-surefire-junit5-tree-reporter.verison}</version>
          </dependency>
        </dependencies>
        <configuration>
          <reportFormat>plain</reportFormat>
          <useModulePath>false</useModulePath>
          <consoleOutputReporter>
            <disable>true</disable>
          </consoleOutputReporter>
          <includes>
            <include>**/*Test.java</include>
            <exclude>**/Test*.java</exclude>
          </includes>
          <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
            <disable>false</disable>
            <version>3.0</version>
            <usePhrasedFileName>false</usePhrasedFileName>
            <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
            <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
            <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
          </statelessTestsetReporter>
          <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
            <disable>false</disable>
            <usePhrasedFileName>false</usePhrasedFileName>
            <usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
            <usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
          </statelessTestsetInfoReporter>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <failsOnError>false</failsOnError>
          <linkXRef>false</linkXRef>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
        </configuration>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report-aggregate</id>
            <phase>verify</phase>
            <inherited>false</inherited>
            <goals>
              <goal>report-aggregate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>${dependency-check.version}</version>
        <configuration>
          <nvdApiDelay>1000</nvdApiDelay>
          <name>Dependency Check</name>
          <nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
          <nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
          <nodeAuditAnalyzerEnabled>false</nodeAuditAnalyzerEnabled>
          <yarnAuditAnalyzerEnabled>false</yarnAuditAnalyzerEnabled>
          <pnpmAuditAnalyzerEnabled>false</pnpmAuditAnalyzerEnabled>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals><goal>jar-no-fork</goal></goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals><goal>jar</goal></goals>
          </execution>
        </executions>
        <configuration>
          <defaultAuthor>Evan Bergstrom</defaultAuthor>
          <defaultVersion>${project.version}</defaultVersion>
          <version>true</version>
          <author>true</author>
          <quiet>true</quiet>
          <name>Documentation</name>
          <docfilessubdirs>true</docfilessubdirs>
          <additionalJOptions>
            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
          </additionalJOptions>
          <additionalOptions>-stylesheetfile ${javaDocStylesheetPath} ${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script src="https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;&lt;script type="text/javascript" async src="${math.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
          <tags>
            <tag>
              <name>apiNote</name>
              <placement>a</placement>
              <head>API Note:</head>
            </tag>
            <tag>
              <name>implSpec</name>
              <placement>a</placement>
              <head>Implementation Requirements:</head>
            </tag>
            <tag>
              <name>implNote</name>
              <placement>a</placement>
              <head>Implementation Note:</head>
            </tag>
            <tag>
              <name>complexity</name>
              <placement>m</placement>
              <head>Complexity:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>${maven-project-info-reports-plugin.version}</version>
      </plugin>

      <plugin>
        <artifactId>maven-site-plugin</artifactId>
        <version>${maven-site-plugin.version}</version>
        <configuration>
          <locales>en</locales>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven-surefire-report-plugin.version}</version>
      </plugin>

      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>${central-publishing-maven-plugin.version}</version> <!-- or latest -->
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
          <waitUntil>validated</waitUntil>
          <!-- Explicit snapshots endpoint (so we never fall back to legacy settings) -->
           <centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots/</centralSnapshotsUrl>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <!-- Profile to sign only when explicitly enabled -->
  <profiles>
    <profile>
      <id>sign-release</id>
      <activation>
        <property>
          <name>gpg.sign</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${maven-gpg-plugin.version}</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>deploy</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <!-- Prefer full fingerprint via env var in CI -->
                  <keyname>${env.GPG_KEY_ID}</keyname>
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>${maven-site-plugin.version}</version>
        <configuration>
            <locales>en</locales>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <configuration>
          <defaultAuthor>Evan Bergstrom</defaultAuthor>
          <defaultVersion>${project.version}</defaultVersion>
          <version>true</version>
          <author>true</author>
          <quiet>true</quiet>
          <name>Documentation</name>
          <docfilessubdirs>true</docfilessubdirs>
          <additionalJOptions>
            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
          </additionalJOptions>
          <additionalOptions>-stylesheetfile ${javaDocStylesheetPath} ${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script src="https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;&lt;script type="text/javascript" async src="${math.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
          <tags>
            <tag>
              <name>apiNote</name>
              <placement>a</placement>
              <head>API Note:</head>
            </tag>
            <tag>
              <name>implSpec</name>
              <placement>a</placement>
              <head>Implementation Requirements:</head>
            </tag>
            <tag>
              <name>implNote</name>
              <placement>a</placement>
              <head>Implementation Note:</head>
            </tag>
            <tag>
              <name>complexity</name>
              <placement>m</placement>
              <head>Complexity:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <version>${maven-surefire-report-plugin.version}</version>
          <configuration>
            <aggregate>true</aggregate>
            <linkXRef>true</linkXRef>
          </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>${maven-jxr-plugin.version}</version>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <reportSets>
          <reportSet>
            <id>aggregate-checkstyle-report</id>
            <reports>
              <report>checkstyle-aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <linkXRef>false</linkXRef>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <reportSets>
          <reportSet>
            <id>report-aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>report-aggregate</report>
          </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>${dependency-check.version}</version>
        <configuration>
          <nvdApiDelay>1000</nvdApiDelay>
          <name>Dependency Check</name>
        </configuration>
        <reportSets>
            <reportSet>
                <reports>
                    <report>aggregate</report>
                </reports>
            </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
</project>
